# warpmcp

./: .env  .env.template  .gitignore  Cargo.toml  README.md  fix.sh  fix_data.lua  mcp-config.json  res.sh  setup.sh
MCP/config/: server.toml
Wow/: crazy.md
src/: cache.rs  main.rs  schemas.rs  server.rs  utils.rs
src/scripts/: diagnose_redis.lua  init_redis.lua
src/tools/: .memory.rs.swp  database.rs  heartbeat.rs  memory.rs  mod.rs  search.rs  tasks.rs  trello.rs
src/tools/tests/: search_test.rs
