[package]
name = "mcp-warp-tasks-server"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for Warp terminal agent coordination with Trello and persistent memory"

[dependencies]
tokio                    = { version = "1.35", features = ["full"] }
serde                    = { version = "1.0",  features = ["derive"] }
serde_json               = "1.0"

# ── Redis stack ────────────────────────────────────────────────────────────────
redis                    = { version = "0.24", features = ["tokio-comp", "json", "aio"] }
deadpool-redis           = { version = "0.14", features = ["rt_tokio_1"] }
deadpool                 = "0.10"        # <- needed for QueueMode enum

# ── Metrics ────────────────────────────────────────────────────────────────────
metrics                  = "0.21"
metrics-exporter-prometheus = "0.13"

# ── HTTP / external I/O ────────────────────────────────────────────────────────
reqwest                  = { version = "0.11", features = ["json"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid                     = { version = "1.6", features = ["v4", "serde"] }
anyhow                   = "1.0"
thiserror                = "1.0"
chrono                   = { version = "0.4", features = ["serde"] }
log                      = "0.4"
env_logger               = "0.10"
async-trait              = "0.1"
base64                   = "0.21"
urlencoding              = "2.1"
flate2                   = "1.0"
fastrand                 = "2.0"

[dev-dependencies]
tokio-test               = "0.4"

